--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="styles/reset.css" />
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> -->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="css.folder/style.css" />
   <title>Weather Dashboard</title>
 </head>
 
@@ -21,12 +22,12 @@
     <div class="row">
       <aside class="col-lg-3 pb-3">
         <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
+          Search for a city:
         </h2>
         <form id="search-form" class="form">
           <div class="form-inline form-group">
             <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
+              <input class="form-input weather-search" type="text" id="search-input" placeholder=""
                 aria-labelledby="form-heading" aria-controls="today forecast" />
               <div class="input-group-append">
                 <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
@@ -41,8 +42,56 @@
       </aside>
 
       <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+        <section id="today" class="mt-3" role="region" aria-live="polite">
+          <div class="card">
+            <div id="current-weather-card">
+              <h3 id="todays-weather">Current weather</h3>
+            </div>
+          </div>
+        </section>
+
+        <section id="forecast-wrapper">
+          <h3>Forecast</h3>
+
+
+          <section id="forecast" class="row mt-3" role="region" aria-live="polite">
+
+            <div class="card">
+              <div class="card-body">
+                <h3>Day 1</h3>
+                5-DAY FORECAST PLACEHOLDER
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <h3>Day 2</h3>
+                5-DAY FORECAST PLACEHOLDER
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <h3>Day 3</h3>
+                5-DAY FORECAST PLACEHOLDER
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <h3>Day 4</h3>
+                5-DAY FORECAST PLACEHOLDER
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <h3>Day 5</h3>
+                5-DAY FORECAST PLACEHOLDER
+              </div>
+            </div>
+          </section>
+        </section>
+
+
+
+
       </div>
     </div>
   </div>
@@ -51,7 +100,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="script.js"></script>
+  <script src="/js.folder/script.js"></script>
 </body>
 
 </html>
