--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <div class="col-lg-9 pb-3">
         <section id="today" class="mt-3" role="region" aria-live="polite">
-          <div class="card">
+          <div class="current-weather-card">
             <div id="current-weather-card">
               <h3 id="todays-weather">Current weather</h3>
             </div>
@@ -51,36 +51,36 @@
         </section>
 
         <section id="forecast-wrapper">
-          <h3>Forecast</h3>
+          <h3>5-day forecast</h3>
 
 
           <section id="forecast" class="row mt-3" role="region" aria-live="polite">
 
-            <div class="card">
-              <div class="card-body">
-                <h3>Day 1</h3>
-                5-DAY FORECAST PLACEHOLDER
+            <div class="forecast-card">
+              <div class="card-body" id="card-body-1">
+                <h3 class="forecast-date">Day 1</h3>
+
               </div>
             </div>
-            <div class="card">
+            <div class="forecast-card">
               <div class="card-body">
                 <h3>Day 2</h3>
                 5-DAY FORECAST PLACEHOLDER
               </div>
             </div>
-            <div class="card">
+            <div class="forecast-card">
               <div class="card-body">
                 <h3>Day 3</h3>
                 5-DAY FORECAST PLACEHOLDER
               </div>
             </div>
-            <div class="card">
+            <div class="forecast-card">
               <div class="card-body">
                 <h3>Day 4</h3>
                 5-DAY FORECAST PLACEHOLDER
               </div>
             </div>
-            <div class="card">
+            <div class="forecast-card">
               <div class="card-body">
                 <h3>Day 5</h3>
                 5-DAY FORECAST PLACEHOLDER
