--- a/index.html
+++ b/index.html
@@ -63,25 +63,25 @@
               </div>
             </div>
             <div class="forecast-card">
-              <div class="card-body">
+              <div class="card-body" id="card-body-2">
                 <h3>Day 2</h3>
                 5-DAY FORECAST PLACEHOLDER
               </div>
             </div>
             <div class="forecast-card">
-              <div class="card-body">
+              <div class="card-body" id="card-body-3">
                 <h3>Day 3</h3>
                 5-DAY FORECAST PLACEHOLDER
               </div>
             </div>
             <div class="forecast-card">
-              <div class="card-body">
+              <div class="card-body" id="card-body-4">
                 <h3>Day 4</h3>
                 5-DAY FORECAST PLACEHOLDER
               </div>
             </div>
             <div class="forecast-card">
-              <div class="card-body">
+              <div class="card-body" id="card-body-5">
                 <h3>Day 5</h3>
                 5-DAY FORECAST PLACEHOLDER
               </div>
