5-day forecast loop success

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
     <h1>Weather Dashboard</h1>
+    <p id="currentDay" class="lead">[ Error: cannot retrieve today's date ]</p>
   </header>
 
   <!-- max-width for ultra wide resolutions -->
@@ -57,33 +58,33 @@
           <section id="forecast" class="row mt-3" role="region" aria-live="polite">
 
             <div class="forecast-card">
-              <div class="card-body" id="card-body-1">
+              <div class="card-body">
                 <h3 class="forecast-date">Day 1</h3>
 
               </div>
             </div>
             <div class="forecast-card">
-              <div class="card-body" id="card-body-2">
-                <h3>Day 2</h3>
-                5-DAY FORECAST PLACEHOLDER
+              <div class="card-body">
+                <h3 class="forecast-date">Day 2</h3>
+
               </div>
             </div>
             <div class="forecast-card">
-              <div class="card-body" id="card-body-3">
-                <h3>Day 3</h3>
-                5-DAY FORECAST PLACEHOLDER
+              <div class="card-body">
+                <h3 class="forecast-date">Day 3</h3>
+
               </div>
             </div>
             <div class="forecast-card">
-              <div class="card-body" id="card-body-4">
-                <h3>Day 4</h3>
-                5-DAY FORECAST PLACEHOLDER
+              <div class="card-body">
+                <h3 class="forecast-date">Day 4</h3>
+
               </div>
             </div>
             <div class="forecast-card">
-              <div class="card-body" id="card-body-5">
-                <h3>Day 5</h3>
-                5-DAY FORECAST PLACEHOLDER
+              <div class="card-body">
+                <h3 class="forecast-date">Day 5</h3>
+
               </div>
             </div>
           </section>
