--- a/index.html
+++ b/index.html
@@ -44,50 +44,50 @@
 
       <div class="col-lg-9 pb-3">
         <section id="today" class="mt-3" role="region" aria-live="polite">
-          <div class="current-weather-card">
+          <div class="current-weather-card hidden">
             <div id="current-weather-card">
-              <h3 id="todays-weather">Current weather</h3>
+              <h3 id="todays-weather"></h3>
             </div>
           </div>
         </section>
 
         <section id="forecast-wrapper">
-          <h3>5-day forecast</h3>
 
 
-          <section id="forecast" class="row mt-3" role="region" aria-live="polite">
+
+          <!-- <section id="forecast" class="row mt-3" role="region" aria-live="polite">
 
             <div class="forecast-card">
               <div class="card-body">
-                <h3 class="forecast-date">Day 1</h3>
+                <h3 class="forecast-date"></h3>
 
               </div>
             </div>
             <div class="forecast-card">
               <div class="card-body">
-                <h3 class="forecast-date">Day 2</h3>
+                <h3 class="forecast-date"></h3>
 
               </div>
             </div>
             <div class="forecast-card">
               <div class="card-body">
-                <h3 class="forecast-date">Day 3</h3>
+                <h3 class="forecast-date"></h3>
 
               </div>
             </div>
             <div class="forecast-card">
               <div class="card-body">
-                <h3 class="forecast-date">Day 4</h3>
+                <h3 class="forecast-date"></h3>
 
               </div>
             </div>
             <div class="forecast-card">
               <div class="card-body">
-                <h3 class="forecast-date">Day 5</h3>
+                <h3 class="forecast-date"></h3>
 
               </div>
             </div>
-          </section>
+          </section> -->
         </section>
 
 
