--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             </div>
           </div>
         </form>
-        <div class="list-group" id="history"></div>
+        <div class="list-group" id="history">
+          <!-- Search history buttons will go here -->
+        </div>
       </aside>
 
       <div class="col-lg-9 pb-3">
@@ -52,42 +54,7 @@
         </section>
 
         <section id="forecast-wrapper">
-
-
-
-          <!-- <section id="forecast" class="row mt-3" role="region" aria-live="polite">
-
-            <div class="forecast-card">
-              <div class="card-body">
-                <h3 class="forecast-date"></h3>
-
-              </div>
-            </div>
-            <div class="forecast-card">
-              <div class="card-body">
-                <h3 class="forecast-date"></h3>
-
-              </div>
-            </div>
-            <div class="forecast-card">
-              <div class="card-body">
-                <h3 class="forecast-date"></h3>
-
-              </div>
-            </div>
-            <div class="forecast-card">
-              <div class="card-body">
-                <h3 class="forecast-date"></h3>
-
-              </div>
-            </div>
-            <div class="forecast-card">
-              <div class="card-body">
-                <h3 class="forecast-date"></h3>
-
-              </div>
-            </div>
-          </section> -->
+        
         </section>
 
 
