--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
   <!-- max-width for ultra wide resolutions -->
   <div class="container-fluid" style="max-width: 1400px">
     <div class="row">
-      <aside class="col-lg-3 pb-3">
+      <aside class="col-lg-2 pb-3">
         <h2 id="form-heading" class="mt-1 h3 form-label">
           Search for a city:
         </h2>
         <form id="search-form" class="form">
           <div class="form-inline form-group">
             <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder=""
-                aria-labelledby="form-heading" aria-controls="today forecast" />
+              <input class="form-input weather-search" type="text" id="search-input" aria-labelledby="form-heading"
+                aria-controls="today forecast" />
               <div class="input-group-append">
                 <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
                   Search
                 </button>
+
                 <hr class="hr weather-hr" />
               </div>
             </div>
@@ -44,7 +45,7 @@
         </div>
       </aside>
 
-      <div class="col-lg-9 pb-3">
+      <div class="col-lg-10 pb-3">
         <section id="today" class="mt-3" role="region" aria-live="polite">
           <div class="current-weather-card hidden">
             <div id="current-weather-card">
@@ -53,8 +54,11 @@
           </div>
         </section>
 
+        <h3 id="forecast-header">
+
+        </h3>
         <section id="forecast-wrapper">
-        
+
         </section>
 
 
