--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-gb">
+<html lang="en-gb"> 
 
 <head>
   <meta charset="UTF-8" />
@@ -14,7 +14,7 @@
 
 <body>
   <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
-    <h1>Weather Dashboard</h1>
+    <h1>Weather dashboard</h1>
     <p id="currentDay" class="lead">[ Error: cannot retrieve today's date ]</p>
   </header>
 
